# clarity.ml

./: CHANGES.md  README.md  clarity-lang.opam  clarity.opam  dune  dune-project
src/: clarity.ml  clarity.mli  compare.ml  dune  error.ml  grammar.ml  lexer.mll  library.ml  parse.ml  parser.mly  print.ml  print.mli
test/: dune  test_parse.ml
